# oop

./: .gitignore  CMakeLists.txt  README.md
include/: removingVowels.h
src/: main.cpp  removingVowels.cpp
tests/: test.cpp
